--- a/antipiracy/build.gradle
+++ b/antipiracy/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     // Kotlin dependencies
     compileOnly "androidx.annotation:annotation:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     
     // Testing dependencies
     testImplementation "junit:junit:4.13.2"
