--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,26 +1,68 @@
-# yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
-
+# Project information
 site_name: Kevlar
-site_url: https://kevlar-kt.github.io/kevlar/
+site_url: https://kevlar-kt.github.io/kevlar
+site_author: Kevlar
+site_description: >-
+    Android Security Framework
+
 repo_name: Kevlar
 repo_url: https://github.com/kevlar-kt/kevlar
-site_description: "Android Security Framework"
-site_author: kevlar
 remote_branch: gh-pages
 edit_uri: ""
 
+
 theme:
     name: material
+    language: en
+
+    features:
+        - content.code.annotate
+        # - content.tabs.link
+        # - header.autohide
+        # - navigation.expand
+        - navigation.instant
+        # - navigation.instant
+        - navigation.sections
+        - navigation.tabs
+        # - navigation.tabs.sticky
+        - navigation.tracking
+        - navigation.indexes
+        - search.highlight
+        - search.share
+        - search.suggest
+        # - toc.integrate
     palette:
         - media: "(prefers-color-scheme: light)"
           scheme: default
           primary: cyan
+          accent: orange
           toggle:
               icon: material/lightbulb-outline
               name: Switch to dark mode
         - media: "(prefers-color-scheme: dark)"
           scheme: slate
           primary: cyan
+          accent: orange
           toggle:
               icon: material/lightbulb
               name: Switch to light mode
+
+
+markdown_extensions:
+    - tables
+    - footnotes
+    - pymdownx.highlight:
+          anchor_linenums: true
+    - pymdownx.inlinehilite
+    - pymdownx.snippets
+    - pymdownx.superfences
+    - abbr
+    - admonition
+
+nav:
+    - 'Overview':
+        - 'Overview': index.md
+    - 'Modules':
+         - 'Antipiracy': modules/antipiracy.md
+         - 'Integrity': modules/integrity.md
+         - 'Rooting': modules/rooting.md
