--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ edit_uri: ""
 theme:
     name: material
     language: en
+    logo: assets/images/shield_light.png
+    favicon: assets/images/shield_light.png
 
     features:
         - content.code.annotate
@@ -47,6 +49,16 @@ theme:
               icon: material/lightbulb
               name: Switch to light mode
 
+extra_css:
+  - 'assets/css/app.css'
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/kevlar-kt
+
+    - icon: fontawesome/brands/twitter 
+      link: https://twitter.com/cioccarellia
 
 markdown_extensions:
     - tables
@@ -58,6 +70,9 @@ markdown_extensions:
     - pymdownx.superfences
     - abbr
     - admonition
+    - attr_list
+    - def_list
+    - md_in_html
 
 nav:
     - 'Overview':
