--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_author: Kevlar
 site_description: >-
     Android Security Toolkit
 
-repo_name: Kevlar
+repo_name: kevlar
 repo_url: https://github.com/kevlar-kt/kevlar
 remote_branch: gh-pages
 edit_uri: ""
@@ -33,8 +33,8 @@ theme:
         - search.highlight
         - search.share
         - search.suggest
-
         # - toc.integrate
+
     palette:
         - media: "(prefers-color-scheme: light)"
           scheme: default
@@ -65,7 +65,6 @@ nav:
     - 'Index':
           - 'Overview': index.md
           - 'Philosophy': pages/overview/philosophy.md
-          - 'Terminology': pages/overview/terminology.md
           - 'Dependencies & Integration': pages/overview/dependencies_integration.md
     - Antipiracy:
           - 'Overview' : pages/modules/antipiracy/antipiracy.md
