--- a/rooting/build.gradle
+++ b/rooting/build.gradle
@@ -69,6 +69,7 @@ android {
 }
 
 
+
 /**
  * Library dependencies
  * */
@@ -76,6 +77,7 @@ dependencies {
     // Kotlin dependencies
     compileOnly "androidx.annotation:annotation:1.4.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3"
     
     // Testing dependencies
     testImplementation "junit:junit:4.13.2"
@@ -92,6 +94,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         freeCompilerArgs += [
                 //'-progressive',
                 '-Xexplicit-api=strict',
+                //'-opt-in=kotlin.RequiresOptIn',
         ]
     }
 }
