Updated showcase to include rooting, design fixes

--- a/showcase/src/main/AndroidManifest.xml
+++ b/showcase/src/main/AndroidManifest.xml
@@ -28,5 +28,8 @@
         <activity
             android:name="com.kevlar.showcase.ui.activities.antipiracy.AntipiracyActivity"
             android:exported="true" />
+        <activity
+            android:name="com.kevlar.showcase.ui.activities.rooting.RootingActivity"
+            android:exported="true" />
     </application>
 </manifest>
