--- a/antipiracy/build.gradle
+++ b/antipiracy/build.gradle
@@ -54,7 +54,7 @@ project.ext.set("module_${ext.module_name}", new ModuleArtifactCoordinates(
 // Android library script
 apply from: rootProject.file("scripts/commons/library_config.gradle")
 
-// TODO TURN BACK ON
+// TODO Turn on and run release script to publish library. Turn off afterward.
 // apply from: rootProject.file("scripts/publishing/publish_mavencentral.gradle")
 
 
