--- a/rooting/build.gradle
+++ b/rooting/build.gradle
@@ -54,7 +54,7 @@ project.ext.set("module_${ext.module_name}", new ModuleArtifactCoordinates(
 // Android library script
 apply from: rootProject.file("scripts/commons/library_config.gradle")
 
-// TODO TURN BACK ON
+// TODO Turn on and run release script to publish library. Turn off afterward.
 // apply from: rootProject.file("scripts/publishing/publish_mavencentral.gradle")
 
 
@@ -67,7 +67,6 @@ android {
         versionCode 1
     }
 }
-
 
 
 /**
@@ -85,6 +84,12 @@ dependencies {
     testImplementation "org.mockito:mockito-core:4.6.1"
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "org.robolectric:robolectric:4.8.1"
+    
+    // libsu
+    implementation("com.github.topjohnwu.libsu:core:5.0.2") {
+        exclude group: 'androidx.annotation', module: 'annotation'
+    }
+    implementation "androidx.annotation:annotation:1.4.0"
 }
 
 
