--- a/integrity/build.gradle
+++ b/integrity/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     // Kotlin dependencies
     compileOnly "androidx.annotation:annotation:1.4.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3"
     
     // Testing dependencies
     testImplementation "junit:junit:4.13.2"
