--- a/showcase/src/main/AndroidManifest.xml
+++ b/showcase/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
 
+    <uses-permission android:name="android.permission.INSTALL_PACKAGES"
+        tools:ignore="ProtectedPermissions" />
+
     <application
         android:name="com.kevlar.showcase.App"
         android:allowBackup="true"
