--- a/.github/workflows/push-debug-build.yaml
+++ b/.github/workflows/push-debug-build.yaml
@@ -46,5 +46,5 @@ jobs:
             -   name: Upload APK
                 uses: actions/upload-artifact@v1
                 with:
-                    name: debug-apk-artifact
-                    path: showcase/build/outputs/apk/debug/showcase-debug.apk # appears 2 times
+                    name: showcase-debug-build.apk
+                    path: showcase/build/outputs/apk/debug/showcase-debug.apk
