--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 apply from: rootProject.file("scripts/custom/versions.gradle")
-apply plugin: 'io.codearte.nexus-staging'
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
 
 buildscript {
     ext {
@@ -18,7 +18,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.42.0"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.30.0"
+        classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
     }
 }
 
@@ -44,3 +44,5 @@ subprojects {
         targetCompatibility = JavaVersion.VERSION_1_8
     }
 }
+
+apply from: "${rootDir}/scripts/publishing/publish-root.gradle"
