--- a/integrity/build.gradle
+++ b/integrity/build.gradle
@@ -1,5 +1,5 @@
 /**
- * Designed and developed by Andrea Cioccarelli (@cioccarellia)
+ * Designed and developed by Kevlar Contributors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -71,16 +71,16 @@ android {
  * */
 dependencies {
     // Kotlin dependencies
-    compileOnly "androidx.annotation:annotation:1.4.0"
+    compileOnly "androidx.annotation:annotation:1.5.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     
     // Testing dependencies
     testImplementation "junit:junit:4.13.2"
-    testImplementation "androidx.test:core:1.4.0"
-    testImplementation "org.mockito:mockito-core:4.6.1"
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "org.mockito:mockito-core:4.10.0"
     testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.robolectric:robolectric:4.8.1"
+    testImplementation "org.robolectric:robolectric:4.9"
 }
 
 
