--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.appcompat:appcompat:1.5.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "com.google.android.material:material:1.8.0-alpha01"
+    implementation "com.google.android.material:material:1.8.0-beta01"
     
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
@@ -80,18 +80,18 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
     
     implementation "com.jakewharton.timber:timber:5.0.1"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
     
-    implementation "com.google.dagger:hilt-android:2.42"
-    kapt "com.google.dagger:hilt-compiler:2.42"
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
     
     testImplementation "junit:junit:4.13.2"
-    testImplementation "androidx.test:core:1.4.0"
-    testImplementation "org.mockito:mockito-core:4.6.1"
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "org.mockito:mockito-core:4.10.0"
     testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.robolectric:robolectric:4.8.1"
+    testImplementation "org.robolectric:robolectric:4.9"
 }
