--- a/rooting/build.gradle
+++ b/rooting/build.gradle
@@ -82,9 +82,10 @@ dependencies {
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "org.robolectric:robolectric:4.9"
     
-    // libsu
-    implementation("com.github.topjohnwu.libsu:core:5.0.3") {
-        // exclude group: 'androidx.annotation', module: 'annotation'
+    // libsu, fixed at 5.0.2
+    //noinspection GradleDependency
+    implementation("com.github.topjohnwu.libsu:core:5.0.2") {
+        exclude group: 'androidx.annotation', module: 'annotation'
     }
     implementation "androidx.annotation:annotation:1.5.0"
 }
