--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ kotlin.code.style=official
 
 # android.jetifier.blacklist=bcprov
 android.jetifier.ignorelist=bcprov
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
