--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -35,18 +35,19 @@ android {
         }
     }
     
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    // compileOptions {
+    //     sourceCompatibility JavaVersion.VERSION_17
+    //     targetCompatibility JavaVersion.VERSION_17
+    // }
     
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+    // kotlinOptions {
+    //     jvmTarget = "1.8"
+    // }
     
     buildFeatures {
         dataBinding true
     }
+    namespace 'com.kevlar.showcase'
 }
 
 def local = true
@@ -69,25 +70,25 @@ dependencies {
     }
     
     
-    implementation "androidx.core:core-ktx:1.9.0"
-    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "com.google.android.material:material:1.8.0-beta01"
+    implementation "com.google.android.material:material:1.11.0-alpha02"
     
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
     
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.0"
     
     implementation "com.jakewharton.timber:timber:5.0.1"
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
     
-    implementation "com.google.dagger:hilt-android:2.44.2"
-    kapt "com.google.dagger:hilt-compiler:2.44.2"
+    implementation "com.google.dagger:hilt-android:2.47"
+    kapt "com.google.dagger:hilt-compiler:2.47"
     
     testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.test:core:1.5.0"
