--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ kotlin.code.style=official
 # Right now the first one is depecated and the second one is experimental.
 
 # android.jetifier.blacklist=bcprov
-android.jetifier.ignorelist=bcprov
+# android.jetifier.ignorelist=bcprov
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+#org.gradle.configuration-cache=true
