--- a/rooting/build.gradle
+++ b/rooting/build.gradle
@@ -73,9 +73,16 @@ android {
  * */
 dependencies {
     // Kotlin dependencies
-    compileOnly "androidx.annotation:annotation:1.6.0"
+    
+    // Keep fixed at 1.3.0, compatibility issue with libsu otherwise, noinspection GradleDependency
+    compileOnly "androidx.annotation:annotation:1.3.0"
+    
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    
+    // LibSU
+    implementation "com.github.topjohnwu.libsu:core:5.2.0"
+        // exclude group: 'androidx.annotation', module: 'annotation'
     
     // Testing dependencies
     testImplementation "junit:junit:4.13.2"
@@ -84,11 +91,6 @@ dependencies {
     testImplementation "com.google.truth:truth:1.1.5"
     testImplementation "org.robolectric:robolectric:4.10.3"
     
-    // libsu, fixed at 5.0.2
-    //noinspection GradleDependency
-    implementation("com.github.topjohnwu.libsu:core:5.0.2") {
-        exclude group: 'androidx.annotation', module: 'annotation'
-    }
 }
 
 
