--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -50,7 +50,7 @@ android {
     namespace 'com.kevlar.showcase'
 }
 
-def local = true
+def local = false
 
 dependencies {
     /**
@@ -65,8 +65,14 @@ dependencies {
         def kevlar_version = "1.1.1"
     
         implementation "io.github.kevlar-kt:antipiracy:$kevlar_version"
-        implementation "io.github.kevlar-kt:rooting:$kevlar_version"
         implementation "io.github.kevlar-kt:integrity:$kevlar_version"
+    
+    
+    
+        implementation "io.github.kevlar-kt:rooting:$kevlar_version"
+        
+        // needed for :rooting module
+        implementation("com.github.topjohnwu.libsu:core:5.2.0")
     }
     
     
@@ -81,18 +87,18 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.7.0"
-    implementation "androidx.navigation:navigation-ui-ktx:2.7.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.1"
     
     implementation "com.jakewharton.timber:timber:5.0.1"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
     
-    implementation "com.google.dagger:hilt-android:2.47"
-    kapt "com.google.dagger:hilt-compiler:2.47"
+    implementation "com.google.dagger:hilt-android:2.48"
+    kapt "com.google.dagger:hilt-compiler:2.48"
     
     testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.test:core:1.5.0"
-    testImplementation "org.mockito:mockito-core:4.10.0"
-    testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.robolectric:robolectric:4.9"
+    testImplementation "org.mockito:mockito-core:5.5.0"
+    testImplementation "com.google.truth:truth:1.1.5"
+    testImplementation "org.robolectric:robolectric:4.10.3"
 }
