--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,6 @@ kotlin.code.style=official
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
-#org.gradle.configuration-cache=true
+
+# cached builds
+# org.gradle.configuration-cache=true
