--- a/rooting/build.gradle
+++ b/rooting/build.gradle
@@ -80,16 +80,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
     
-    // LibSU
+    // LibSU / Do Not Update, noinspection GradleDependency
     implementation "com.github.topjohnwu.libsu:core:5.2.0"
         // exclude group: 'androidx.annotation', module: 'annotation'
     
     // Testing dependencies
     testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.test:core:1.5.0"
-    testImplementation "org.mockito:mockito-core:5.5.0"
-    testImplementation "com.google.truth:truth:1.1.5"
-    testImplementation "org.robolectric:robolectric:4.10.3"
+    testImplementation "org.mockito:mockito-core:5.9.0"
+    testImplementation "com.google.truth:truth:1.2.0"
+    testImplementation "org.robolectric:robolectric:4.11.1"
     
 }
 
