--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -75,29 +75,29 @@ dependencies {
     }
     
     
-    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "com.google.android.material:material:1.11.0-alpha02"
+    implementation "com.google.android.material:material:1.11.0"
     
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
     
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.7.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.7.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.6"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.6"
     
     implementation "com.jakewharton.timber:timber:5.0.1"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.13'
     
-    implementation "com.google.dagger:hilt-android:2.48"
-    kapt "com.google.dagger:hilt-compiler:2.48"
+    implementation "com.google.dagger:hilt-android:2.50"
+    kapt "com.google.dagger:hilt-compiler:2.50"
     
     testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.test:core:1.5.0"
-    testImplementation "org.mockito:mockito-core:5.5.0"
-    testImplementation "com.google.truth:truth:1.1.5"
-    testImplementation "org.robolectric:robolectric:4.10.3"
+    testImplementation "org.mockito:mockito-core:5.9.0"
+    testImplementation "com.google.truth:truth:1.2.0"
+    testImplementation "org.robolectric:robolectric:4.11.1"
 }
