Added logging & traceability, refactoring & restructuring

--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -66,7 +66,6 @@ dependencies {
     
         implementation "io.github.kevlar-kt:antipiracy:$kevlar_version"
         implementation "io.github.kevlar-kt:integrity:$kevlar_version"
-    
         implementation "io.github.kevlar-kt:rooting:$kevlar_version"
         
         // needed for :rooting module
@@ -74,29 +73,33 @@ dependencies {
     }
     
     
-    implementation "androidx.core:core-ktx:1.12.0"
+    implementation "androidx.core:core-ktx:1.13.1"
+    
+    //noinspection GradleDependency
     implementation "androidx.appcompat:appcompat:1.6.1"
+    
+    
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "com.google.android.material:material:1.11.0"
+    implementation "com.google.android.material:material:1.12.0"
     
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
     
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.2"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.2"
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
     
     implementation "com.jakewharton.timber:timber:5.0.1"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.13'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'
     
-    implementation "com.google.dagger:hilt-android:2.50"
-    kapt "com.google.dagger:hilt-compiler:2.50"
+    implementation "com.google.dagger:hilt-android:2.51.1"
+    kapt "com.google.dagger:hilt-compiler:2.51.1"
     
     testImplementation "junit:junit:4.13.2"
     testImplementation "androidx.test:core:1.5.0"
-    testImplementation "org.mockito:mockito-core:5.10.0"
-    testImplementation "com.google.truth:truth:1.4.0"
-    testImplementation "org.robolectric:robolectric:4.11.1"
+    testImplementation "org.mockito:mockito-core:5.12.0"
+    testImplementation "com.google.truth:truth:1.4.2"
+    testImplementation "org.robolectric:robolectric:4.12.2"
 }
